# cs354r-assignment3

./: .gitignore  Ball.cpp  Ball.h  BaseApplication.cpp  BulletContactCallback.h  Enemy.cpp  Enemy.h  GUIManager.cpp  GUIManager.h  GameObject.cpp  GameObject.h  Makefile.am  OgreMotionState.h  Paddle.cpp  Paddle.h  PlayingField.cpp  PlayingField.h  Projectile.cpp  Projectile.h  README.md  REPORT.txt  Simulator.cpp  Simulator.h  SoundManager.cpp  SoundManager.h  TutorialApplication.cpp  TutorialApplication.h  USERMANUAL.txt  assignment2  assignment3  configure.ac  resources.cfg
assets/: green.material  lobby.layout  mainmenu.layout  settings.layout
assets/layouts/: lobby.layout  mainmenu.layout  score.layout  settings.layout
assets/schemes/: VanillaSkin.scheme
